src/tsv/snapshots/annonars__tsv__schema__test__infer_schema_header.snap
---
source: src/tsv/schema.rs
expression: record
---
FileSchema {
    columns: [
        ColumnSchema {
            name: "a",
            typ: Unknown,
        },
        ColumnSchema {
            name: "b",
            typ: Unknown,
        },
        ColumnSchema {
            name: "c",
            typ: Unknown,
        },
        ColumnSchema {
            name: "d",
            typ: Unknown,
        },
    ],
    null_values: [
        ".",
    ],
}
