src/tsv/snapshots/annonars__tsv__schema__test__infer_schema_values.snap
---
source: src/tsv/schema.rs
expression: record
---
FileSchema {
    columns: [
        ColumnSchema {
            name: "a",
            typ: String,
        },
        ColumnSchema {
            name: "b",
            typ: String,
        },
        ColumnSchema {
            name: "c",
            typ: Float,
        },
        ColumnSchema {
            name: "d",
            typ: Integer,
        },
    ],
}
